<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sim_settings_text" 
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sim_number_label"
        android:textColor="@color/white" />

        <EditText
            android:id="@+id/simSerialNumberTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_label"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/phoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </EditText>

    <Button
        android:id="@+id/backToControlPanelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_caption" />

    <Button
            android:id="@+id/deleteContactsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_contacts_btn_caption" />
</LinearLayout>