<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/attention_word_text" />

    <EditText
        android:id="@+id/attentionWordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_text" />
        
    <EditText
        android:id="@+id/targetPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sendSmsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_sms_btn_caption" />

        <Button
            android:id="@+id/openSimSettingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sim_settings_btn_caption" />

        <Button
            android:id="@+id/sendMMSBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_mms_btn_caption" />
            
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/eraseSmsInobxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erase_sms_inbox_btn_caption" />
            
     </LinearLayout>
</LinearLayout>